--- a/style.scss
+++ b/style.scss
@@ -588,6 +588,7 @@ body {
 
             img {
                 width: 100%;
+                max-width: 600px;
                 height: auto;
                 display: block;
             }
