--- a/style.css
+++ b/style.css
@@ -480,42 +480,39 @@ body {
   background-color: #e3393d;
 }
 
-.portfolio-section {
+.portfolio-page {
+  text-align: center;
+  width: 100%;
+  max-width: 1400px;
+}
+.portfolio-page h1 {
+  font-size: 2em;
+  margin-bottom: 20px;
+}
+
+.portfolio-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 10px;
   padding: 20px;
 }
-.portfolio-section .portfolio-carousel {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 20px;
+
+.portfolio-item {
+  text-align: center;
 }
-.portfolio-section .portfolio-carousel .portfolio-item {
-  position: relative;
-  width: calc(50% - 10px);
-  cursor: pointer;
+.portfolio-item img {
+  width: 300px;
+  height: 300px;
+  border-radius: 5px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: 0;
+     object-position: 0;
 }
-.portfolio-section .portfolio-carousel .portfolio-item img {
-  width: 100%;
-  max-width: 600px;
-  height: auto;
-  display: block;
-}
-.portfolio-section .portfolio-carousel .portfolio-item .portfolio-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.6);
-  color: #fff;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  opacity: 0;
-  transition: opacity 0.3s ease;
-}
-.portfolio-section .portfolio-carousel .portfolio-item:hover .portfolio-overlay {
-  opacity: 1;
+.portfolio-item p {
+  margin-top: 10px;
+  font-size: 1em;
+  color: #666;
 }
 
 footer {
