--- a/style.css
+++ b/style.css
@@ -496,11 +496,10 @@ body {
   gap: 10px;
   padding: 20px;
 }
-
-.portfolio-item {
+.portfolio-grid .portfolio-item {
   text-align: center;
 }
-.portfolio-item img {
+.portfolio-grid .portfolio-item img {
   width: 300px;
   height: 300px;
   border-radius: 5px;
@@ -509,7 +508,7 @@ body {
   -o-object-position: 0;
      object-position: 0;
 }
-.portfolio-item p {
+.portfolio-grid .portfolio-item p {
   margin-top: 10px;
   font-size: 1em;
   color: #666;
@@ -520,6 +519,7 @@ footer {
   margin-top: 100px;
   padding: 50px;
   text-align: center;
+  max-width: 100%;
 }
 footer p {
   color: #ffffff;
