--- a/style.scss
+++ b/style.scss
@@ -590,24 +590,26 @@ body {
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 10px;
     padding: 20px;
+
+    .portfolio-item {
+        text-align: center;
+        
+        img {
+            width: 300px;
+            height: 300px;
+            border-radius: 5px;
+            object-fit: cover;
+            object-position: 0;
+        }
+        p {
+            margin-top: 10px;
+            font-size: 1em;
+            color: #666;
+        }
+    }
+    
 }
 
-.portfolio-item {
-    text-align: center;
-    
-    img {
-        width: 300px;
-        height: 300px;
-        border-radius: 5px;
-        object-fit: cover;
-        object-position: 0;
-    }
-    p {
-        margin-top: 10px;
-        font-size: 1em;
-        color: #666;
-    }
-}
 
 // 頁尾區
 footer {
@@ -615,6 +617,7 @@ footer {
     margin-top: 100px;
     padding: 50px;
     text-align: center;
+    max-width: 100%;
 
     p {
         color: $background-color;
