--- a/style.css
+++ b/style.css
@@ -359,12 +359,12 @@ body {
 }
 .process-section .process-circle .step-2 {
   top: 30%;
-  right: 5%;
+  right: 0;
   transform: translate(0, -50%);
 }
 .process-section .process-circle .step-3 {
   bottom: 30%;
-  right: 5%;
+  right: 0;
   transform: translate(0, 50%);
 }
 .process-section .process-circle .step-4 {
@@ -374,12 +374,12 @@ body {
 }
 .process-section .process-circle .step-5 {
   bottom: 30%;
-  left: 5%;
+  left: 0;
   transform: translate(0, 50%);
 }
 .process-section .process-circle .step-6 {
   top: 35%;
-  left: 5%;
+  left: 0;
   transform: translate(0, -50%);
 }
 .process-section .process-circle .step::after {
@@ -392,7 +392,7 @@ body {
 .process-section .process-circle .step-1::after {
   transform: rotate(35deg);
   top: 50%;
-  left: 90%;
+  left: 100%;
 }
 .process-section .process-circle .step-2::after {
   transform: rotate(90deg);
@@ -405,9 +405,9 @@ body {
   left: -5%;
 }
 .process-section .process-circle .step-4::after {
-  transform: rotate(215deg);
+  transform: rotate(210deg);
   bottom: 110%;
-  right: 84%;
+  right: 90%;
 }
 .process-section .process-circle .step-5::after {
   transform: rotate(270deg);
@@ -417,7 +417,7 @@ body {
 .process-section .process-circle .step-6::after {
   transform: rotate(145deg);
   top: -15%;
-  right: 5%;
+  right: -5%;
 }
 
 .portfolio-section {
