--- a/style.css
+++ b/style.css
@@ -510,8 +510,80 @@ body {
 }
 .portfolio-grid .portfolio-item p {
   margin-top: 10px;
+  font-size: 1.5em;
+  color: #000;
+}
+.portfolio-grid .portfolio-item p a {
+  text-decoration: none;
+  color: #000;
+}
+.portfolio-grid .portfolio-item p a:hover {
+  color: #d02b2f;
+}
+.portfolio-grid .portfolio-item .ant {
+  -o-object-position: -140px;
+     object-position: -140px;
+}
+
+.breadcrumb {
+  text-align: center;
+  margin: 20px 0;
   font-size: 1em;
   color: #666;
+}
+.breadcrumb a {
+  color: #d4a15e;
+  text-decoration: none;
+  margin: 0 5px;
+}
+.breadcrumb a:hover {
+  text-decoration: underline;
+}
+.breadcrumb span {
+  color: #888;
+}
+.breadcrumb > a + a::before, .breadcrumb > a + span::before {
+  content: ">";
+  margin: 0 5px;
+  color: #ccc;
+}
+
+.portfolio-show {
+  padding: 50px;
+  text-align: center;
+}
+.portfolio-show .portfolio-item {
+  max-width: 1200px;
+  margin: 0 auto;
+  color: #fff;
+  font-family: "Arial", sans-serif;
+}
+.portfolio-show .portfolio-item .portfolio-image {
+  position: relative;
+  margin-bottom: 20px;
+}
+.portfolio-show .portfolio-item .portfolio-image img {
+  max-width: 100%;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+.portfolio-show .portfolio-item .portfolio-description {
+  padding: 20px;
+}
+.portfolio-show .portfolio-item .portfolio-description h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #000;
+  text-align: left;
+  font-weight: bold;
+}
+.portfolio-show .portfolio-item .portfolio-description p {
+  font-size: 16px;
+  line-height: 1.6;
+  color: #000;
+  text-align: left;
+  font-weight: bold;
 }
 
 footer {
