--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 微軟正黑體;
+  font-family: "微軟正黑體";
   box-sizing: border-box;
 }
 
@@ -44,6 +44,7 @@ body {
 }
 .header .nav ul li {
   margin: 5px 0;
+  text-align: center;
 }
 .header .nav ul li a {
   text-decoration: none;
@@ -65,7 +66,7 @@ body {
   color: #ffffff;
   text-align: center;
   max-width: 1100px;
-  margin: 0 auto;
+  margin: 0 150px auto auto;
 }
 .hero-section .animation-container {
   position: relative;
@@ -110,7 +111,7 @@ body {
   padding: 60px 0;
   background-color: #f5f5f5;
   max-width: 900px;
-  margin: 0 auto;
+  margin: 0 150px auto auto;
 }
 .about-section .section-title {
   text-align: center;
@@ -184,6 +185,7 @@ body {
 .about-us-section {
   padding: 60px 0;
   background-color: #f9f9f9;
+  margin: 0 150px auto;
 }
 .about-us-section .section-title {
   text-align: center;
@@ -251,7 +253,7 @@ body {
   text-align: center;
   background-color: #f5f5f5;
   max-width: 900px;
-  margin: 0 auto;
+  margin: 0 150px auto;
 }
 .services-section .section-title {
   font-size: 2rem;
@@ -298,6 +300,7 @@ body {
 .process-section {
   padding: 60px 0;
   text-align: center;
+  margin: 0 150px auto;
 }
 .process-section .section-title {
   font-size: 2rem;
