--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ body {
   color: #ffffff;
   text-align: center;
   max-width: 1100px;
-  margin: 0 150px auto auto;
+  margin: 0 150px auto;
 }
 .hero-section .animation-container {
   position: relative;
@@ -111,7 +111,7 @@ body {
   padding: 60px 0;
   background-color: #f5f5f5;
   max-width: 900px;
-  margin: 0 150px auto auto;
+  margin: 0 150px auto;
 }
 .about-section .section-title {
   text-align: center;
