--- a/style.scss
+++ b/style.scss
@@ -96,7 +96,7 @@ body {
     color: $background-color;
     text-align: center;
     max-width: 1100px;
-    margin: 0 150px auto auto;
+    margin: 0 150px auto;
 
     // 動畫區域
     .animation-container {
@@ -150,7 +150,7 @@ body {
     padding: $padding-section 0;
     background-color: $secondary-color; // 使用較淺的背景色讓內容突出
     max-width: 900px;
-    margin: 0 150px auto auto;
+    margin: 0 150px auto;
 
     .section-title {
         text-align: center;
